tests/parser/fail/self-local.som
"test:
failMessage:
  - contains: define
  - contains: self
"

SelfLocal = (
  test = (
    |self|

    'you shant pass'
  )
)
